@@ -6,6 +6,7 @@ Patches:
   Stefan Kowski <stefan.kowski@parks-informatik.de>
   Christophe Hermier <chris.hermier@laposte.net>
   Frederic Giudicelli <frederic.giudicelli@newpki.org>
+  Tim Dijkstra <tim@famdijkstra.org>
 
 Translations:
   Traditional Chinese:  Leo Liaw <leo@mis.ccu.edu.tw> 
