@@ -2,6 +2,7 @@
 Version 1.2.6
 -------------
 
+- fixed catalog I/O to correctly handle automatic comments (Tim Dijkstra)
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
